# hill-of-towie-wind-turbine-power-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: submit.yaml
notebooks/: attempt-1.ipynb  layout.ipynb  submission.ipynb
notebooks/submissions/: hill-of-towie-power-prediction.ipynb  kernel-metadata.json
src/wtg_power_prediction/: dataset.py  model.py  sun.py
tests/: test_dataset.py  test_wtg_power_prediction.py
